- "brand-logos" section is complete; - some fixes and cleanups;

--- a/index.html
+++ b/index.html
@@ -889,33 +889,48 @@
         <!--End TESTIMONIALS-->
         <!--Begin BRAND LOGOS-->
         <div class="brand-logos">
-            <b>BRANDING</b>
-            <div class="border">
-                ...............................................................<br />
-                ...............................................................
+            <div class="wrapper">
+                <div class="description">
+                    <h2>Branding</h2>
+                    <div class="dotted-line"></div>
+                    <div class="select">
+                        <a class="prev-control" onclick="fourthPlusDiv(-1)">
+                            <i class="fa fa-angle-left"></i>
+                        </a>
+                        <a class="next-control" onclick="fourthPlusDiv(+1)">
+                            <i class="fa fa-angle-right"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="content">
+                    <div class="mySlides">
+                        <div class="mySlide fourthInScript">
+				            <img src="images/brand-logos/brand1.png" alt="">
+				        </div>
+                        <div class="mySlide fourthInScript">
+				            <img src="images/brand-logos/brand2.png" alt="">
+				        </div>
+                        <div class="mySlide fourthInScript">
+				            <img src="images/brand-logos/brand3.png" alt="">
+				        </div>
+                        <div class="mySlide fourthInScript">
+				            <img src="images/brand-logos/brand4.png" alt="">
+				        </div>
+                        <div class="mySlide fourthInScript">
+				            <img src="images/brand-logos/brand5.png" alt="">
+				        </div>
+                        <div class="mySlide fourthInScript">
+				            <img src="images/brand-logos/brand6.png" alt="">
+				        </div>
+                        <div class="mySlide fourthInScript">
+				            <img src="images/brand-logos/brand1.png" alt="">
+				        </div>
+                        <div class="mySlide fourthInScript">
+				            <img src="images/brand-logos/brand2.png" alt="">
+				        </div>
+                    </div>
+                </div>
             </div>
-            <div class="empl_prev"></div>
-            <div class="empl_next"></div>
-            <ul>
-                <li>
-                    <img src="/path" alt="Old vintage">
-                </li>
-                <li>
-                    <img src="/path" alt="Vintage first">
-                </li>
-                <li>
-                    <img src="/path" alt="Sewn by">
-                </li>
-                <li>
-                    <img src="/path" alt="Lorem ipsum">
-                </li>
-                <li>
-                    <img src="/path" alt="Hand sewn">
-                </li>
-                <li>
-                    <img src="/path" alt="Vintage second">
-                </li>
-            </ul>
         </div>
         <!--End BRAND LOGOS-->
         <!--Begin FOOTER-->
