--- a/index.html
+++ b/index.html
@@ -937,20 +937,31 @@
         <footer>
             <!--Begin FOOTER TOP-->
             <div class="footer-top">
-                <div class="newsletter-wrapper">
-                    <i class="fa-letter"></i><a href="#">SIGNUP</a>
-                    <p>NEWSLETTER</p>
-                    <form action="/newsletter">
-                        <input type="text" class="message-input">
-                        <input type="submit" value="submit">
-                    </form>
-                </div>
-                <div class="credit-cards">
-                    <a href="#" class="paypal"></a>
-                    <a href="#" class="discover"></a>
-                    <a href="#" class="visa-electron"></a>
-                    <a href="#" class="master-card"></a>
-                    <a href="#" class="visa"></a>
+                <div class="wrapper">
+                    <div class="newsletter-wrapper">
+				        <a href=""><i class="fa fa-envelope"></i>signup newsletter</a>
+						<input placeholder="" type="text">
+						<input value="submit" type="submit">
+                    </div>
+                    <div class="credit-cards">
+                        <div class="floatright">
+                            <a href="#">
+                                <img src="images/footer/footer-top/1.png" alt="">
+                            </a>
+                            <a href="#">
+                                <img src="images/footer/footer-top/2.png" alt="">
+                            </a>
+                            <a href="#">
+                                <img src="images/footer/footer-top/3.png" alt="">
+                            </a>
+                            <a href="#">
+                                <img src="images/footer/footer-top/4.png" alt="">
+                            </a>
+                            <a href="#">
+                                <img src="images/footer/footer-top/5.png" alt="">
+                            </a>
+                            </div>
+                    </div>
                 </div>
             </div>
             <!--End FOOTER TOP-->
