- "site-map" section is complete; - some fixes; - in general - task complete;
(maybe need some fonts and animation)

--- a/index.html
+++ b/index.html
@@ -967,86 +967,59 @@
             <!--End FOOTER TOP-->
             <!--Begin SITE MAP-->
             <div class="site-map">
-                <div class="collumn">
-                    <h3>INFORMATION</h3>
-                    <ul>
-                        <li>
-                            <a href="#">New Products</a>
-                        </li>
-                        <li>
-                            <a href="#">Top Seller</a>
-                        </li>
-                        <li>
-                            <a href="#">Special</a>
-                        </li>
-                        <li>
-                            <a href="#">Manufactures</a>
-                        </li>
-                        <li>
-                            <a href="#">Suppliers</a>
-                        </li>
-                        <li>
-                            <a href="#">Our Stores</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="collumn">
-                    <h3>MY ACCOUNT</h3>
-                    <ul>
-                        <li>
-                            <a href="#">My Account</a>
-                        </li>
-                        <li>
-                            <a href="#">Personal Information</a>
-                        </li>
-                        <li>
-                            <a href="#">Addresses</a>
-                        </li>
-                        <li>
-                            <a href="#">Discounts</a>
-                        </li>
-                        <li>
-                            <a href="#">Order History</a>
-                        </li>
-                        <li>
-                            <a href="#">Your Vouchers</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="collumn">
-                    <h3>CUSTOMER SERVICE</h3>
-                    <ul>
-                        <li>
-                            <a href="#">Help &amp; Contact</a>
-                        </li>
-                        <li>
-                            <a href="#">Shipping &amp; Taxes</a>
-                        </li>
-                        <li>
-                            <a href="#">Return Policy</a>
-                        </li>
-                        <li>
-                            <a href="#">Careers</a>
-                        </li>
-                        <li>
-                            <a href="#">Affliates</a>
-                        </li>
-                        <li>
-                            <a href="#">Legal Notice</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="collumn">
-                    <h3>CONTACT INFO</h3>
-                    <p>Address: 44 New Design Street, Melbourne 005</p>
-                    <p>Phone: (01) 800 433 633</p>
-                    <p>Email: info@Example.com</p>
-                    <div class="soc-icon">
-                        <a href="#" class="fcb"></a>
-                        <a href="#" class="twt"></a>
-                        <a href="#" class="ggl"></a>
-                        <a href="#" class="ins"></a>
-                        <a href="#" class="rss"></a>
+                <div class="wrapper">
+                    <div class="collumn">
+						<h5>Information</h5>
+						<div class="colorline"></div>
+						<ul class="navigation">
+                            <li><a href="">New Products</a></li>
+                            <li><a href="">Top Seller</a></li>
+                            <li><a href="">Special</a></li>
+                            <li><a href="">Manufactures</a></li>
+                            <li><a href="">Suppliers</a></li>
+                            <li><a href="">Our Stores</a></li>
+						</ul>
+                    </div>
+                    <div class="collumn">
+                        <h5>My account</h5>
+                        <div class="colorline"></div>
+                        <ul class="navigation">
+                            <li><a href="">My Account</a></li>
+                            <li><a href="">Personal Information</a></li>
+                            <li><a href="">Addresses</a></li>
+                            <li><a href="">Discounts</a></li>
+                            <li><a href="">Order History</a></li>
+                            <li><a href="">Your Vouchers</a></li>
+                        </ul>
+                    </div>
+                    <div class="collumn">
+                        <h5>Customer service</h5>
+                        <div class="colorline"></div>
+                        <ul class="navigation">
+                            <li><a href="">Help &amp; Contact</a></li>
+                            <li><a href="">Shipping &amp; Taxes</a></li>
+                            <li><a href="">Return Policy</a></li> 
+                            <li><a href="">Careers</a></li>
+                            <li><a href="">Affliates</a></li>
+                            <li><a href="">Legal Notice</a></li>
+                        </ul>
+                    </div>
+                    <div class="collumn">
+                        <h5>Contact info</h5>
+                        <div class="colorline"></div>
+                        <address>
+                            Address : 44 New Design Street,<br>
+                            Melbourne 005<br>
+                            Phone : (01) 800 433 633<br>
+                            Email : info@Example.com
+                        </address>
+                        <ul class="social-links">
+                            <li><a class="fa fa-facebook" href=""></a></li>
+                            <li><a class="fa fa-twitter" href=""></a></li>
+                            <li><a class="fa fa-google-plus" href=""></a></li>
+                            <li><a class="fa fa-instagram" href=""></a></li>
+                            <li><a class="fa fa-rss" href=""></a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
