1. Add cfgs for brackets SASS and  sass lint 2. Global cleanups 3. Fix issue #2

--- a/index.html
+++ b/index.html
@@ -226,8 +226,8 @@
                         <span class="color-pink"> X </span>
                         <a href="#">Best offer</a>
                     </span>
-                    <div class="mySlides">
-                        <div class="mySlide firstInScript">
+                    <div class="my-slides">
+                        <div class="my-slide firstInScript">
                             <div class="item">
                                 <div class="item-image">
                                     <img src="images/trending-clothing/bg.png" alt="Item image">
@@ -312,7 +312,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="mySlide firstInScript">
+                        <div class="my-slide firstInScript">
                             <div class="item">
                                 <div class="item-image">
                                     <img src="images/trending-clothing/bg.png" alt="Item image">
@@ -399,7 +399,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="mySlide firstInScript">
+                        <div class="my-slide firstInScript">
                             <div class="item">
                                 <div class="item-image">
                                     <img src="images/trending-clothing/bg.png" alt="Item image">
@@ -529,8 +529,8 @@
                     <span class="select">
                         <a href="#">Summer offer! Get extra discount upto 20&#37; for all collect on</a>
                     </span>
-                    <div class="mySlides">
-                        <div class="mySlide">
+                    <div class="my-slides">
+                        <div class="my-slide">
                             <div class="item">
                                 <div class="item-image">
                                     <img src="images/trending-clothing/bg.png" alt="Item image">
@@ -617,7 +617,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="mySlide">
+                        <div class="my-slide">
                             <div class="item">
                                 <div class="item-image">
                                     <img src="images/trending-clothing/bg.png" alt="Item image">
@@ -723,8 +723,8 @@
                             <i class="fa fa-angle-right"></i>
                         </a>
                     </span>
-                    <div class="mySlides">
-                        <div class="mySlide secondInScript">
+                    <div class="my-slides">
+                        <div class="my-slide secondInScript">
 				            <div class="collumn">
 								<div class="item-text">
 									<h2><span>_</span> 13</h2>
@@ -772,7 +772,7 @@
 								</div>
 							</div>
                         </div>
-                        <div class="mySlide secondInScript">
+                        <div class="my-slide secondInScript">
 				            <div class="collumn">
 								<div class="item-text">
 									<h2><span>_</span> 11</h2>
@@ -834,8 +834,8 @@
                     <div class="multi-line"></div>
                 </div>
                 <div class="content">
-                    <div class="mySlides">
-                        <div class="mySlide thirdInScript">
+                    <div class="my-slides">
+                        <div class="my-slide thirdInScript">
                             <p class="description">
                                 <i class="fa fa-quote-left"></i>
                                 It’s really Awesome Theme &amp; specialy made for brand online shopping, so this theme uniqe elements use to create your dream website and help to promote your Product.
@@ -849,7 +849,7 @@
 								</div>
                             </div>
                         </div>
-                        <div class="mySlide thirdInScript">
+                        <div class="my-slide thirdInScript">
                             <p class="description">
                                 <i class="fa fa-quote-left"></i>
                                 It’s really Awesome Theme &amp; specialy made for brand online shopping, so this theme uniqe elements use to create your dream website and help to promote your Product.
@@ -863,7 +863,7 @@
 								</div>
                             </div>
                         </div>
-                        <div class="mySlide thirdInScript">
+                        <div class="my-slide thirdInScript">
                             <p class="description">
                                 <i class="fa fa-quote-left"></i>
                                 It’s really Awesome Theme &amp; specialy made for brand online shopping, so this theme uniqe elements use to create your dream website and help to promote your Product.
@@ -903,29 +903,29 @@
                     </div>
                 </div>
                 <div class="content">
-                    <div class="mySlides">
-                        <div class="mySlide fourthInScript">
+                    <div class="my-slides">
+                        <div class="my-slide fourthInScript">
 				            <img src="images/brand-logos/brand1.png" alt="">
 				        </div>
-                        <div class="mySlide fourthInScript">
+                        <div class="my-slide fourthInScript">
 				            <img src="images/brand-logos/brand2.png" alt="">
 				        </div>
-                        <div class="mySlide fourthInScript">
+                        <div class="my-slide fourthInScript">
 				            <img src="images/brand-logos/brand3.png" alt="">
 				        </div>
-                        <div class="mySlide fourthInScript">
+                        <div class="my-slide fourthInScript">
 				            <img src="images/brand-logos/brand4.png" alt="">
 				        </div>
-                        <div class="mySlide fourthInScript">
+                        <div class="my-slide fourthInScript">
 				            <img src="images/brand-logos/brand5.png" alt="">
 				        </div>
-                        <div class="mySlide fourthInScript">
+                        <div class="my-slide fourthInScript">
 				            <img src="images/brand-logos/brand6.png" alt="">
 				        </div>
-                        <div class="mySlide fourthInScript">
+                        <div class="my-slide fourthInScript">
 				            <img src="images/brand-logos/brand1.png" alt="">
 				        </div>
-                        <div class="mySlide fourthInScript">
+                        <div class="my-slide fourthInScript">
 				            <img src="images/brand-logos/brand2.png" alt="">
 				        </div>
                     </div>
