floatright -> float-right fix

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <p>Get free! Shipping on order over<span>$100</span></p>
                 </div>
                 <div class="part-section">
-                    <div class="floatright">
+                    <div class="float-right">
                         <p><a href="">Login</a> / <a href="">Register</a></p>
 				        <ul class="language-list">
                                 <li><a href="">USD</a></li>
@@ -40,7 +40,7 @@
                     <img src="images/header-level-two/logo.png" alt="Site logo">
                 </div>
                 <div class="buttons-wrapper">
-                    <div class="floatright">
+                    <div class="float-right">
                         <ul>
                             <li>
                                 <a href="#"><i class="fa fa-heart-o"></i> Wishlist</a>
@@ -944,7 +944,7 @@
 						<input value="submit" type="submit">
                     </div>
                     <div class="credit-cards">
-                        <div class="floatright">
+                        <div class="float-right">
                             <a href="#">
                                 <img src="images/footer/footer-top/1.png" alt="">
                             </a>
