Try fix maket of site with pixel perfect (now upto baner).

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="header-level-one">
             <div class="wrapper">
                 <div class="part-section">
-                    <img src="images/header-level-one/delivery.png" alt="Delivery icon">
+                    <img class="delivery-icon" src="images/header-level-one/delivery.png" alt="Delivery icon">
                     <p>Get free! Shipping on order over<span>$100</span></p>
                 </div>
                 <div class="part-section">
@@ -23,7 +23,7 @@
 				        <ul class="language-list">
                                 <li><a href="">USD</a></li>
 							</ul>
-				        <img src="images/header-level-one/flag.png" alt="Flag icon" />
+				        <img  src="images/header-level-one/flag.png" alt="Flag icon" />
                     </div>
                 </div>
             </div>
@@ -43,10 +43,10 @@
                     <div class="float-right">
                         <ul>
                             <li>
-                                <a href="#"><i class="fa fa-heart-o"></i> Wishlist</a>
+                                <a href="#"><i class="fa fa-shopping-cart"></i> Checkout</a>
                             </li>
                             <li>
-                                <a href="#"><i class="fa fa-shopping-cart"></i> Checkout</a>
+                                <a href="#"><i class="fa fa-heart-o"></i> Wishlist</a>
                             </li>
                         </ul>
                         <div class="comments-count">
@@ -173,7 +173,7 @@
                     <div class="offer-tag">
                         <div class="text">
                             <span>GET</span>
-                            <span>20&#37;</span>
+                            <span class="discount">20&#37;</span>
                         </div>
                     </div>
                     <!--End OFFER TAG-->
