Try fix maket of site with pixel perfect (now upto blog).

--- a/index.html
+++ b/index.html
@@ -188,22 +188,22 @@
                 <ul>
                     <li>
                         <img src="images/features/call.png" alt="Call icon">
-                        <p>
+                        <span>
                             01 (800) 433 633 <br>
                             Daily 10.00 to 22.00
-                        </p>
+                        </span>
                     </li>
                     <li>
                         <img src="images/features/fast-delivery.png" alt="Fast delivery icon">
-                        <p>Fast delivery across australia</p>
+                        <span>Fast delivery across australia</span>
                     </li>
                     <li>
                         <img src="images/features/discount.png" alt="Discount icon">
-                        <p>30&#37; discount on order over &#36;199</p>
+                        <span>30&#37; discount on order over &#36;199</span>
                     </li>
                     <li>
                         <img src="images/features/return.png" alt="Return icon">
-                        <p>14-day return policy</p>
+                        <span>14-day return policy</span>
                     </li>
                 </ul>
             </div>
@@ -233,8 +233,8 @@
                                     <img src="images/trending-clothing/bg.png" alt="Item image">
                                     <div class="item-menu">
                                         <ul>
-                                            <li><a class="fa fa-shopping-cart tr-cart" href="#"></a></li>
-                                            <li><a class="tr-text" href="#">Add to cart</a></li>
+                                            <li><a class="fa fa-shopping-cart tr-cart" href="#"></a>
+                                            <a class="tr-text" href="#">Add to cart</a></li>
                                             <li><a class="fa fa-heart tr-heart" href="#"></a></li>
                                             <li><a class="fa fa-search tr-search" href="#"></a></li>
                                         </ul>
@@ -255,8 +255,8 @@
                                     <img src="images/trending-clothing/bg.png" alt="Item image">
                                     <div class="item-menu">
                                         <ul>
-                                            <li><a class="fa fa-shopping-cart tr-cart" href="#"></a></li>
-                                            <li><a class="tr-text" href="#">Add to cart</a></li>
+                                            <li><a class="fa fa-shopping-cart tr-cart" href="#"></a>
+                                            <a class="tr-text" href="#">Add to cart</a></li>
                                             <li><a class="fa fa-heart tr-heart" href="#"></a></li>
                                             <li><a class="fa fa-search tr-search" href="#"></a></li>
                                         </ul>
@@ -275,8 +275,8 @@
                                     <img src="images/trending-clothing/bg.png" alt="Item image">
                                     <div class="item-menu">
                                         <ul>
-                                            <li><a class="fa fa-shopping-cart tr-cart" href="#"></a></li>
-                                            <li><a class="tr-text" href="#">Add to cart</a></li>
+                                            <li><a class="fa fa-shopping-cart tr-cart" href="#"></a>
+                                            <a class="tr-text" href="#">Add to cart</a></li>
                                             <li><a class="fa fa-heart tr-heart" href="#"></a></li>
                                             <li><a class="fa fa-search tr-search" href="#"></a></li>
                                         </ul>
@@ -295,8 +295,8 @@
                                     <img src="images/trending-clothing/bg.png" alt="Item image">
                                     <div class="item-menu">
                                         <ul>
-                                            <li><a class="fa fa-shopping-cart tr-cart" href="#"></a></li>
-                                            <li><a class="tr-text" href="#">Add to cart</a></li>
+                                            <li><a class="fa fa-shopping-cart tr-cart" href="#"></a>
+                                            <a class="tr-text" href="#">Add to cart</a></li>
                                             <li><a class="fa fa-heart tr-heart" href="#"></a></li>
                                             <li><a class="fa fa-search tr-search" href="#"></a></li>
                                         </ul>
@@ -318,8 +318,8 @@
                                     <img src="images/trending-clothing/bg.png" alt="Item image">
                                     <div class="item-menu">
                                         <ul>
-                                            <li><a class="fa fa-shopping-cart tr-cart" href="#"></a></li>
-                                            <li><a class="tr-text" href="#">Add to cart</a></li>
+                                            <li><a class="fa fa-shopping-cart tr-cart" href="#"></a>
+                                            <a class="tr-text" href="#">Add to cart</a></li>
                                             <li><a class="fa fa-heart tr-heart" href="#"></a></li>
                                             <li><a class="fa fa-search tr-search" href="#"></a></li>
                                         </ul>
@@ -340,8 +340,8 @@
                                     <img src="images/trending-clothing/bg.png" alt="Item image">
                                     <div class="item-menu">
                                         <ul>
-                                            <li><a class="fa fa-shopping-cart tr-cart" href="#"></a></li>
-                                            <li><a class="tr-text" href="#">Add to cart</a></li>
+                                            <li><a class="fa fa-shopping-cart tr-cart" href="#"></a>
+                                            <a class="tr-text" href="#">Add to cart</a></li>
                                             <li><a class="fa fa-heart tr-heart" href="#"></a></li>
                                             <li><a class="fa fa-search tr-search" href="#"></a></li>
                                         </ul>
@@ -361,8 +361,8 @@
                                     <img src="images/trending-clothing/bg.png" alt="Item image">
                                     <div class="item-menu">
                                         <ul>
-                                            <li><a class="fa fa-shopping-cart tr-cart" href="#"></a></li>
-                                            <li><a class="tr-text" href="#">Add to cart</a></li>
+                                            <li><a class="fa fa-shopping-cart tr-cart" href="#"></a>
+                                            <a class="tr-text" href="#">Add to cart</a></li>
                                             <li><a class="fa fa-heart tr-heart" href="#"></a></li>
                                             <li><a class="fa fa-search tr-search" href="#"></a></li>
                                         </ul>
@@ -382,8 +382,8 @@
                                     <img src="images/trending-clothing/bg.png" alt="Item image">
                                     <div class="item-menu">
                                         <ul>
-                                            <li><a class="fa fa-shopping-cart tr-cart" href="#"></a></li>
-                                            <li><a class="tr-text" href="#">Add to cart</a></li>
+                                            <li><a class="fa fa-shopping-cart tr-cart" href="#"></a>
+                                            <a class="tr-text" href="#">Add to cart</a></li>
                                             <li><a class="fa fa-heart tr-heart" href="#"></a></li>
                                             <li><a class="fa fa-search tr-search" href="#"></a></li>
                                         </ul>
@@ -405,8 +405,8 @@
                                     <img src="images/trending-clothing/bg.png" alt="Item image">
                                     <div class="item-menu">
                                         <ul>
-                                            <li><a class="fa fa-shopping-cart tr-cart" href="#"></a></li>
-                                            <li><a class="tr-text" href="#">Add to cart</a></li>
+                                            <li><a class="fa fa-shopping-cart tr-cart" href="#"></a>
+                                            <a class="tr-text" href="#">Add to cart</a></li>
                                             <li><a class="fa fa-heart tr-heart" href="#"></a></li>
                                             <li><a class="fa fa-search tr-search" href="#"></a></li>
                                         </ul>
@@ -426,8 +426,8 @@
                                     <img src="images/trending-clothing/bg.png" alt="Item image">
                                     <div class="item-menu">
                                         <ul>
-                                            <li><a class="fa fa-shopping-cart tr-cart" href="#"></a></li>
-                                            <li><a class="tr-text" href="#">Add to cart</a></li>
+                                            <li><a class="fa fa-shopping-cart tr-cart" href="#"></a>
+                                            <a class="tr-text" href="#">Add to cart</a></li>
                                             <li><a class="fa fa-heart tr-heart" href="#"></a></li>
                                             <li><a class="fa fa-search tr-search" href="#"></a></li>
                                         </ul>
@@ -447,8 +447,8 @@
                                     <img src="images/trending-clothing/bg.png" alt="Item image">
                                     <div class="item-menu">
                                         <ul>
-                                            <li><a class="fa fa-shopping-cart tr-cart" href="#"></a></li>
-                                            <li><a class="tr-text" href="#">Add to cart</a></li>
+                                            <li><a class="fa fa-shopping-cart tr-cart" href="#"></a>
+                                            <a class="tr-text" href="#">Add to cart</a></li>
                                             <li><a class="fa fa-heart tr-heart" href="#"></a></li>
                                             <li><a class="fa fa-search tr-search" href="#"></a></li>
                                         </ul>
@@ -467,8 +467,8 @@
                                     <img src="images/trending-clothing/bg.png" alt="Item image">
                                     <div class="item-menu">
                                         <ul>
-                                            <li><a class="fa fa-shopping-cart tr-cart" href="#"></a></li>
-                                            <li><a class="tr-text" href="#">Add to cart</a></li>
+                                            <li><a class="fa fa-shopping-cart tr-cart" href="#"></a>
+                                            <a class="tr-text" href="#">Add to cart</a></li>
                                             <li><a class="fa fa-heart tr-heart" href="#"></a></li>
                                             <li><a class="fa fa-search tr-search" href="#"></a></li>
                                         </ul>
@@ -498,8 +498,8 @@
         <div class="promotion">
             <div class="collumn">
                 <div class="side-left">
-                    <span class="color-pink big-font">Hausna</span>
-                    <span>Made in men's wear</span>
+                    <span class="color-pink" style="font-size: 40px;">Hausna</span>
+                    <span style="font-size: 16px;">Made in men's wear</span>
                     <span class="with-border">See our exclusive collection</span>
                     <div class="button">
                         <a href="#">Shop now</a>
@@ -508,7 +508,7 @@
             </div>
             <div class="collumn">
                 <div class="side-right">
-                    <span>Explore our new collection</span>
+                    <span style="margin-bottom: 4px;">Explore our new collection</span>
                     <span class="color-pink big-font">We know your fit</span>
                     <span class="with-border">Get the extra <span class="color-pink">50&#37;</span> offer! Today only</span>
                     <div class="button">
@@ -536,8 +536,8 @@
                                     <img src="images/trending-clothing/bg.png" alt="Item image">
                                     <div class="item-menu">
                                         <ul>
-                                            <li><a class="fa fa-shopping-cart tr-cart" href="#"></a></li>
-                                            <li><a class="tr-text" href="#">Add to cart</a></li>
+                                            <li><a class="fa fa-shopping-cart tr-cart" href="#"></a>
+                                            <a class="tr-text" href="#">Add to cart</a></li>
                                             <li><a class="fa fa-heart tr-heart" href="#"></a></li>
                                             <li><a class="fa fa-search tr-search" href="#"></a></li>
                                         </ul>
@@ -558,8 +558,8 @@
                                     <img src="images/trending-clothing/bg.png" alt="Item image">
                                     <div class="item-menu">
                                         <ul>
-                                            <li><a class="fa fa-shopping-cart tr-cart" href="#"></a></li>
-                                            <li><a class="tr-text" href="#">Add to cart</a></li>
+                                            <li><a class="fa fa-shopping-cart tr-cart" href="#"></a>
+                                            <a class="tr-text" href="#">Add to cart</a></li>
                                             <li><a class="fa fa-heart tr-heart" href="#"></a></li>
                                             <li><a class="fa fa-search tr-search" href="#"></a></li>
                                         </ul>
@@ -579,8 +579,8 @@
                                     <img src="images/trending-clothing/bg.png" alt="Item image">
                                     <div class="item-menu">
                                         <ul>
-                                            <li><a class="fa fa-shopping-cart tr-cart" href="#"></a></li>
-                                            <li><a class="tr-text" href="#">Add to cart</a></li>
+                                            <li><a class="fa fa-shopping-cart tr-cart" href="#"></a>
+                                            <a class="tr-text" href="#">Add to cart</a></li>
                                             <li><a class="fa fa-heart tr-heart" href="#"></a></li>
                                             <li><a class="fa fa-search tr-search" href="#"></a></li>
                                         </ul>
@@ -600,8 +600,8 @@
                                     <img src="images/trending-clothing/bg.png" alt="Item image">
                                     <div class="item-menu">
                                         <ul>
-                                            <li><a class="fa fa-shopping-cart tr-cart" href="#"></a></li>
-                                            <li><a class="tr-text" href="#">Add to cart</a></li>
+                                            <li><a class="fa fa-shopping-cart tr-cart" href="#"></a>
+                                            <a class="tr-text" href="#">Add to cart</a></li>
                                             <li><a class="fa fa-heart tr-heart" href="#"></a></li>
                                             <li><a class="fa fa-search tr-search" href="#"></a></li>
                                         </ul>
@@ -623,8 +623,8 @@
                                     <img src="images/trending-clothing/bg.png" alt="Item image">
                                     <div class="item-menu">
                                         <ul>
-                                            <li><a class="fa fa-shopping-cart tr-cart" href="#"></a></li>
-                                            <li><a class="tr-text" href="#">Add to cart</a></li>
+                                            <li><a class="fa fa-shopping-cart tr-cart" href="#"></a>
+                                            <a class="tr-text" href="#">Add to cart</a></li>
                                             <li><a class="fa fa-heart tr-heart" href="#"></a></li>
                                             <li><a class="fa fa-search tr-search" href="#"></a></li>
                                         </ul>
@@ -644,8 +644,8 @@
                                     <img src="images/trending-clothing/bg.png" alt="Item image">
                                     <div class="item-menu">
                                         <ul>
-                                            <li><a class="fa fa-shopping-cart tr-cart" href="#"></a></li>
-                                            <li><a class="tr-text" href="#">Add to cart</a></li>
+                                            <li><a class="fa fa-shopping-cart tr-cart" href="#"></a>
+                                            <a class="tr-text" href="#">Add to cart</a></li>
                                             <li><a class="fa fa-heart tr-heart" href="#"></a></li>
                                             <li><a class="fa fa-search tr-search" href="#"></a></li>
                                         </ul>
@@ -665,8 +665,8 @@
                                     <img src="images/trending-clothing/bg.png" alt="Item image">
                                     <div class="item-menu">
                                         <ul>
-                                            <li><a class="fa fa-shopping-cart tr-cart" href="#"></a></li>
-                                            <li><a class="tr-text" href="#">Add to cart</a></li>
+                                            <li><a class="fa fa-shopping-cart tr-cart" href="#"></a>
+                                            <a class="tr-text" href="#">Add to cart</a></li>
                                             <li><a class="fa fa-heart tr-heart" href="#"></a></li>
                                             <li><a class="fa fa-search tr-search" href="#"></a></li>
                                         </ul>
@@ -685,8 +685,8 @@
                                     <img src="images/trending-clothing/bg.png" alt="Item image">
                                     <div class="item-menu">
                                         <ul>
-                                            <li><a class="fa fa-shopping-cart tr-cart" href="#"></a></li>
-                                            <li><a class="tr-text" href="#">Add to cart</a></li>
+                                            <li><a class="fa fa-shopping-cart tr-cart" href="#"></a>
+                                            <a class="tr-text" href="#">Add to cart</a></li>
                                             <li><a class="fa fa-heart tr-heart" href="#"></a></li>
                                             <li><a class="fa fa-search tr-search" href="#"></a></li>
                                         </ul>
