--- a/RESTful API Task/src/index.html
+++ b/RESTful API Task/src/index.html
@@ -14,7 +14,7 @@
     <body>
         <div class='header-container'>
             <div class="header-menu row">
-                <div class="col-md-1 logo"><a href="#">R</a></div>
+                <div class="col-md-1 logo"><a href="#">R!</a></div>
                 <div class="col-md-7 col-md-offset-4">
                     <ul class="menu">
                         <li><a href="#">About</a></li>
@@ -53,13 +53,22 @@
             </div>
             <div class="events-container">
             </div>
-            <div class="header-events row">
+            <div class="footer-events row">
                 <div class="col-md-3">
-                    <span class="site-part-name">Upcoming Events</span>
+                    <span class="prev-events">Previous Events</span>
                 </div>
-                <div class="col-md-3 col-md-offset-6"></div>
+                <div class="col-md-3 col-md-offset-6">
+                    <span class="next-events">Next Events</span>
+                </div>
             </div>
         </div>
         <div class="any-event"></div>
+        <div class='footer-container'>
+            <div class="text row">
+                Loving God, Loving Others, Serving LA &amp; the world!
+            </div>
+            <div class="logo row"><a href="#">R!</a></div>
+            <footer>&copy Aleksei Rakitski 2017. All Rights Reserved</footer>
+        </div>
     </body>
 </html>
