--- a/RESTful API Task/src/index.html
+++ b/RESTful API Task/src/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
+        <script type="text/javascript" src="lib/webcomponents-lite.js"></script>
         <link rel="import" href="event-general.html" />
         <link rel="stylesheet" type="text/css" href="lib/reset.css">
         <link rel="stylesheet" type="text/css" href="lib/bootstrap.min.css">
@@ -62,7 +63,30 @@
                 </div>
             </div>
         </div>
-        <div class="any-event"></div>
+        <div class="any-event row">
+            <div class="col-md-7 details">
+                <div class="name">Details<span class="line"></span></div>
+                <div class="info">
+                    ncfdn jdfbj jdf jdf ncpewoifnjdbvkj ks dlcsdklcl csdj sdj cjdsnfkdnflds c kds cjs c
+                    onvovnrionvornrngioegnenvknflndbnklernigreio lkfnvnrnenoirnoh
+                </div>
+            </div>
+            <div class="col-md-5 other">
+                <div class="name name-title">Title<span class="line"></span></div>
+                <div class="info info-title">
+                    ncfdn jdfbj jdf
+                </div>
+                <div class="name name-author">Author<span class="line"></span></div>
+                <div class="info info-author">
+                    ncfdn jdfbj jdf
+                </div>
+                <div class="name name-date">Date<span class="line"></span></div>
+                <div class="info info-date">
+                    ncfdn jdfbj jdf
+                </div>
+                <div class="button">Go To Source</div>
+            </div>
+        </div>
         <div class='footer-container'>
             <div class="text row">
                 Loving God, Loving Others, Serving LA &amp; the world!
